// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    activeBucket=""
    bucket={
      Object {
        "filter": Object {
          "status": "ac",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challengeTypes={
      Array [
        Object {
          "abbreviation": "CH",
          "name": "Challenge",
        },
        Object {
          "abbreviation": "F2F",
          "name": "First2Finish",
        },
        Object {
          "abbreviation": "TSK",
          "name": "Task",
        },
      ]
    }
    challenges={
      Array [
        Object {
          "id": "1",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "b",
          "totalPrize": 1800,
          "type": "Challenge",
          "users": Object {},
        },
        Object {
          "allPhases": Array [
            Object {
              "phaseStatus": "Open",
              "phaseType": "Registration",
            },
          ],
          "currentPhases": Array [
            "Registration",
          ],
          "events": Array [
            Object {
              "eventName": "Submit",
            },
          ],
          "id": "2",
          "prize": Array [
            1200,
            600,
          ],
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "tags": Array [
            "a",
            "b",
            "c",
          ],
          "technologies": Array [
            "a",
            "b",
            "c",
          ],
          "totalPrize": 1800,
          "track": "Development",
          "type": "Challenge",
          "users": Object {},
        },
      ]
    }
    expand={[MockFunction]}
    expandTag={null}
    expanded={true}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    searchTimestamp={0}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort=""
    userId=""
  />
</StaticRouter>
`;

exports[`Matches shallow shapshot 2`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    activeBucket=""
    bucket={
      Object {
        "filter": Object {
          "status": "ac",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challengeTypes={
      Array [
        Object {
          "abbreviation": "CH",
          "name": "Challenge",
        },
        Object {
          "abbreviation": "F2F",
          "name": "First2Finish",
        },
        Object {
          "abbreviation": "TSK",
          "name": "Task",
        },
      ]
    }
    challenges={
      Array [
        Object {
          "id": "1",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "b",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "2",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "3",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "4",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "5",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "6",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "7",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "8",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "9",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "10",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "11",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
      ]
    }
    expand={[MockFunction]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loading={true}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    searchTimestamp={0}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort=""
    userId=""
  />
</StaticRouter>
`;

exports[`Matches shallow shapshot 3`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    activeBucket=""
    bucket={
      Object {
        "filter": Object {
          "status": "e",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challengeTypes={
      Array [
        Object {
          "abbreviation": "CH",
          "name": "Challenge",
        },
        Object {
          "abbreviation": "F2F",
          "name": "First2Finish",
        },
        Object {
          "abbreviation": "TSK",
          "name": "Task",
        },
      ]
    }
    challenges={Array []}
    expand={[MockFunction]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loading={true}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    searchTimestamp={0}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort=""
    userId=""
  />
</StaticRouter>
`;
